MDEV-31861 Empty INSERT crashes with innodb_force_recovery=6 or innodb_read_only=ON

ha_innobase::extra(): Do not invoke log_buffer_flush_to_disk()
if high_level_read_only holds.

log_buffer_flush_to_disk(): Remove an assertion that duplicates one
at the start of log_write_up_to().